--- a/app/src/main/res/layout/fragment_task_add_category.xml
+++ b/app/src/main/res/layout/fragment_task_add_category.xml
@@ -8,166 +8,221 @@
             type="com.example.pomodoro_timer.viewmodels.TaskViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_height="match_parent">
 
-        <!-- Category title -->
-        <LinearLayout
-            android:id="@+id/category_title_layout_id"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/background_gradient_card"
-            android:padding="16dp"
-            android:layout_margin="16dp"
-            app:layout_constraintTop_toTopOf="parent">
+            xmlns:app="http://schemas.android.com/apk/res-auto">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/title_label"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                app:hintEnabled="false"
-                app:boxBackgroundMode="none"
-                app:counterEnabled="true"
-                app:counterMaxLength="30">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/short_desc_label"
-                    android:text="@={taskVM.categoryTitle}"
-                    android:inputType="text"
-                    android:textSize="16sp"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-
-        <!-- Category Description -->
-        <LinearLayout
-            android:id="@+id/task_desc_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/background_gradient_card"
-            android:padding="16dp"
-            android:layout_margin="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/category_title_layout_id">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/desc_label"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:boxBackgroundMode="none">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/desc_placeholder"
-                    android:textSize="16sp"
-                    android:maxLines="5"
-                    android:gravity="top|start"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/task_icon_selector_layout_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/background_dim_curved_purple"
-            android:padding="16dp"
-            android:layout_margin="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/task_desc_layout">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/category_icon_selector_label"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/category_icon_selector_label2"
-                android:textColor="@color/dim_color"
-                android:textSize="14sp" />
-
-            <!-- Category selection icons -->
+            <!-- Category title -->
             <LinearLayout
-                android:id="@+id/iconSelectorLayout"
+                android:id="@+id/category_title_layout_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:background="@drawable/background_gradient_card"
+                android:padding="16dp"
+                android:layout_margin="16dp"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:id="@+id/icon1"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_margin="6dp"
-                    android:src="@drawable/ic_category_laptop"
-                    android:background="@drawable/ic_selector_bg"
-                    android:contentDescription="@string/selector_icon_laptop"
-                    android:scaleType="centerInside"
-                    android:clickable="true"
-                    android:focusable="true" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_label"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp" />
 
-                <ImageView
-                    android:id="@+id/icon2"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_margin="6dp"
-                    android:src="@drawable/ic_category_book"
-                    android:background="@drawable/ic_selector_bg"
-                    android:contentDescription="@string/selector_icon_book"
-                    android:scaleType="centerInside"
-                    android:clickable="true"
-                    android:focusable="true" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    app:hintEnabled="false"
+                    app:boxBackgroundMode="none"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="30">
 
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/short_desc_label"
+                        android:text="@={taskVM.categoryTitle}"
+                        android:inputType="text"
+                        android:textSize="16sp"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
-        </LinearLayout>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/cancel_btn_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cancel_btn"
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="16dp"
-            android:backgroundTint="@color/category_title_color3"
-            app:layout_constraintTop_toBottomOf="@+id/task_icon_selector_layout_id"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <!-- Category Description -->
+            <LinearLayout
+                android:id="@+id/task_desc_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/background_gradient_card"
+                android:padding="16dp"
+                android:layout_margin="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/category_title_layout_id">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/save_btn_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/save_btn"
-            android:textColor="@color/icon_bg1"
-            android:backgroundTint="@color/white"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/task_icon_selector_layout_id"
-            app:layout_constraintEnd_toEndOf="parent"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/desc_label"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:boxBackgroundMode="none">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/desc_placeholder"
+                        android:textSize="16sp"
+                        android:maxLines="5"
+                        android:gravity="top|start"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/task_icon_selector_layout_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/background_dim_curved_purple"
+                android:padding="16dp"
+                android:layout_margin="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/task_desc_layout">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/category_icon_selector_label"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/category_icon_selector_label2"
+                    android:textColor="@color/dim_color"
+                    android:textSize="14sp" />
+
+                <!-- Category selection icons -->
+                <LinearLayout
+                    android:id="@+id/iconSelectorLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/icon1"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_margin="6dp"
+                        android:src="@drawable/ic_category_laptop"
+                        android:background="@drawable/ic_selector_bg"
+                        android:contentDescription="@string/selector_icon_laptop"
+                        android:scaleType="centerInside"
+                        android:clickable="true"
+                        android:focusable="true" />
+
+                    <ImageView
+                        android:id="@+id/icon2"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_margin="6dp"
+                        android:src="@drawable/ic_category_book"
+                        android:background="@drawable/ic_selector_bg"
+                        android:contentDescription="@string/selector_icon_book"
+                        android:scaleType="centerInside"
+                        android:clickable="true"
+                        android:focusable="true" />
+
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <!-- Adding existing tasks -->
+            <LinearLayout
+                android:id="@+id/task_add_task_layout_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/background_curved_white"
+                android:padding="16dp"
+                android:layout_margin="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/task_icon_selector_layout_id">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginBottom="8dp">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/task_list_label"
+                        android:textColor="@color/count_down_color"
+                        android:textSize="20sp" />
+
+                    <ImageButton
+                        android:id="@+id/add_existing_task_icon_id"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_add2"
+                        android:contentDescription="@string/add_task_in_category_btn"
+                        android:background="@android:color/transparent"
+                        android:elevation="6dp"
+                        android:scaleType="fitCenter" />
+                </LinearLayout>
+
+                <!-- RecyclerView for showing task list -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/task_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:nestedScrollingEnabled="false"
+                    android:clipToPadding="false"
+                    android:overScrollMode="never"/>
+
+            </LinearLayout>
+
+            <!-- Cancel and Save buttons -->
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/cancel_btn_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel_btn"
+                android:textColor="@color/white"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="16dp"
+                android:backgroundTint="@color/category_title_color3"
+                app:layout_constraintTop_toBottomOf="@+id/task_add_task_layout_id"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/save_btn_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/save_btn"
+                android:textColor="@color/icon_bg1"
+                android:backgroundTint="@color/white"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/task_add_task_layout_id"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
