--- a/app/src/main/res/layout/fragment_task_add_task.xml
+++ b/app/src/main/res/layout/fragment_task_add_task.xml
@@ -174,12 +174,33 @@
                 android:layout_margin="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/task_desc_layout">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/add_task_category_label"
-                    android:textColor="@color/count_down_color"
-                    android:textSize="20sp" />
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/add_task_category_label"
+                        android:textColor="@color/count_down_color"
+                        android:textSize="20sp"
+                        android:layout_weight="1"/>
+
+                    <ImageButton
+                        android:id="@+id/remove_picked_category_btn_id"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/ic_delete"
+                        android:contentDescription="@string/add_category_btn"
+                        android:background="@android:color/transparent"
+                        android:visibility="gone"
+                        android:elevation="10dp"
+                        android:scaleType="fitCenter"
+                        android:layout_gravity="end"
+                        android:layout_weight="0"/>
+
+                </LinearLayout>
 
                 <!-- This plus icon disappears if a category is picked -->
                 <ImageButton
@@ -194,30 +215,29 @@
                     android:layout_gravity="center"/>
 
                 <!-- APPEARS -->
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/task_category_icon_id"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:contentDescription="@string/category_icon"
-                    android:scaleType="fitCenter"
-                    android:visibility="gone"/>
-                <TextView
-                    android:id="@+id/task_category_title_id"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{taskVM.categoryTitle}"
-                    android:textColor="@color/count_down_color"
-                    android:textSize="18sp"
-                    android:visibility="gone"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="8dp"/>
-            </LinearLayout>
-
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/task_category_icon_id"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:contentDescription="@string/category_icon"
+                        android:scaleType="fitCenter"
+                        android:visibility="gone"/>
+                    <TextView
+                        android:id="@+id/task_category_title_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{taskVM.categoryTitle}"
+                        android:textColor="@color/count_down_color"
+                        android:textSize="18sp"
+                        android:visibility="gone"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="8dp"/>
+                </LinearLayout>
             </LinearLayout>
             <!-- Cancel and Save buttons -->
             <com.google.android.material.button.MaterialButton
