--- a/app/src/main/res/layout/fragment_task_category_picker.xml
+++ b/app/src/main/res/layout/fragment_task_category_picker.xml
@@ -6,7 +6,7 @@
 
     <ListView
         android:id="@+id/category_list_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
