--- a/app/src/main/res/layout/item_category_picker.xml
+++ b/app/src/main/res/layout/item_category_picker.xml
@@ -16,6 +16,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:contentDescription="@string/category_icon"
+            app:srcCompat="@{categoryModel.icon}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
