--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,41 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="402"
+    android:viewportHeight="325">
+  <group android:scaleY="0.80845773"
+      android:translateY="31.125622">
+    <path
+        android:pathData="M0,0h402v325h-402z">
+      <aapt:attr name="android:fillColor">
+        <gradient
+            android:startX="201"
+            android:startY="0"
+            android:endX="201"
+            android:endY="325"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFFFFFFF"/>
+          <item android:offset="1" android:color="#FFFFFFFF"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M78.41,166.05C78.42,187.09 85.28,207.66 98.11,225.14C110.93,242.63 129.16,256.25 150.48,264.29C171.79,272.33 195.25,274.42 217.87,270.3C240.49,266.18 261.27,256.04 277.57,241.15C293.87,226.26 304.97,207.3 309.46,186.66C313.95,166.02 311.62,144.63 302.78,125.2C293.94,105.76 278.98,89.16 259.79,77.48C240.6,65.8 218.05,59.58 194.98,59.6L195.05,165.98L78.41,166.05Z">
+      <aapt:attr name="android:fillColor">
+        <gradient
+            android:startX="194.98"
+            android:startY="59.6"
+            android:endX="195.12"
+            android:endY="272.36"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF741408"/>
+          <item android:offset="0.5" android:color="#FF99271D"/>
+          <item android:offset="1" android:color="#FF4D0B0B"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <path
+        android:pathData="M96.34,165.82a100.86,94.37 0,1 0,201.72 0a100.86,94.37 0,1 0,-201.72 0z"
+        android:fillColor="#E6442F"/>
+  </group>
 </vector>
