--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -92,7 +92,7 @@
                             android:id="@+id/productivity_percent_score_id"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="75%"
+                            android:text="@{String.valueOf(statsVM.productivityScore) + `%`}"
                             android:textStyle="bold"
                             android:textColor="?attr/baseTextColor"/>
 
@@ -106,7 +106,8 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="10dp"
                         android:layout_marginBottom="10dp"
-                        android:progress="75"
+                        android:progress="@{statsVM.productivityScore}"
+                        android:max="100"
                         android:progressTint="@android:color/white"/>
                 </LinearLayout>
 
